name: "ffmt-ppx-i"
version:"0.1"
opam-version: "2.0"
maintainer: "Florian Angeletti <octa@polychoron.fr>"
authors: "Florian Angeletti <octa@polychoron.fr>"
dev-repo: "git+https://github.com/Octachron/ffmt"
homepage: "https://github.com/Octachron/ffmt"
bug-reports: "https://github.com/Octachron/ffmt/issues"
synopsis: "Format string interpolation ppx for ffmt"
build:[
 ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune"
  "ffmt"
  "ppxlib"
  ]
