name: "ffmt"
version:"0.1"
opam-version: "2.0"
maintainer: "Florian Angeletti <octa@polychoron.fr>"
authors: "Florian Angeletti <octa@polychoron.fr>"
dev-repo: "git+https://github.com/Octachron/ffmt"
homepage: "https://github.com/Octachron/ffmt"
bug-reports: "https://github.com/Octachron/ffmt/issues"
synopsis: "Format string experimentations"
description: "Experiences with reimplementing the format library without direct compiler support"
build:[
 ["dune" "build" "-p" name "-j" jobs]
]


depends: [
  "dune"
  "containers-data"
  "oseq"
  "iter"
 ]
