name: "freefmt-ppx"
version:"0.1"
opam-version: "1.2"
maintainer: "Florian Angeletti <octa@polychoron.fr>"
authors: "Florian Angeletti <octa@polychoron.fr>"
dev-repo: "git+https://github.com/Octachron/freefmt"
homepage: "https://github.com/Octachron/freefmt"
bug-reports: "https://github.com/Octachron/freefmt/issues"

build:[
 ["jbuilder" "build" "-p" name "-j" jobs]
]

build-doc:[
  [ "jbuilder" "build" "-p" name "-j" jobs "@doc" ]
]


depends: [
  "jbuilder" {build}
  "freefmt"
  ]
