
(tests
  (names interpolation)
  (modules Interpolation)
  (preprocess (pps ffmt_ppxi))
  (libraries ffmt)
)

(tests
  (names meta)
  (modules Meta)
  (preprocess (pps ffmt_ppx))
  (libraries ffmt)
)


(tests
  (names readme)
  (modules Readme)
  (preprocess (pps ffmt_ppx))
  (libraries ffmt)
)

(tests
  (names readme_bis)
  (modules Readme_bis)
  (preprocess (pps ffmt_ppxi))
  (libraries ffmt)
)
