(ocamllex (modules mlex))
(ocamllex (modules lex))


(library
 (public_name freefmt-ppx-i)
 (name freefmt_ppxi)
 (wrapped false)
 (modules Ppxi Lex)
 (preprocess (pps ppxlib.metaquot))
 (kind ppx_rewriter)
 (ppx_runtime_libraries freefmt)
 (libraries ppxlib)
)


(library
 (public_name freefmt-ppx)
 (name freefmt_ppx)
 (wrapped false)
 (modules Fppx Mlex)
 (preprocess (pps ppxlib.metaquot))
 (kind ppx_rewriter)
 (ppx_runtime_libraries freefmt)
 (libraries ppxlib)
)
